--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
+		"@supabase/ssr": "^0.6.1",
 		"@t3-oss/env-nextjs": "^0.12.0",
 		"@tanstack/react-query": "^5.69.0",
 		"@trpc/client": "^11.0.0",
@@ -29,6 +30,7 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"server-only": "^0.0.1",
+		"supabase": "^2.22.12",
 		"superjson": "^2.2.1",
 		"zod": "^3.24.2"
 	},
