--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
+		"@radix-ui/react-label": "^2.1.6",
 		"@radix-ui/react-slot": "^1.2.2",
 		"@supabase/ssr": "^0.6.1",
 		"@t3-oss/env-nextjs": "^0.12.0",
