--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
+		"@radix-ui/react-accordion": "^1.2.10",
 		"@radix-ui/react-checkbox": "^1.3.1",
 		"@radix-ui/react-dialog": "^1.1.13",
 		"@radix-ui/react-dropdown-menu": "^2.1.14",
 		"@radix-ui/react-label": "^2.1.6",
 		"@radix-ui/react-separator": "^1.1.6",
 		"@radix-ui/react-slot": "^1.2.2",
+		"@radix-ui/react-switch": "^1.2.4",
+		"@radix-ui/react-toggle": "^1.1.8",
+		"@radix-ui/react-toggle-group": "^1.1.9",
 		"@radix-ui/react-tooltip": "^1.2.6",
 		"@supabase/ssr": "^0.6.1",
 		"@t3-oss/env-nextjs": "^0.12.0",
