--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^5.0.1",
 		"@radix-ui/react-accordion": "^1.2.10",
 		"@radix-ui/react-checkbox": "^1.3.1",
 		"@radix-ui/react-dialog": "^1.1.13",
@@ -43,11 +44,12 @@
 		"postgres": "^3.4.4",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-hook-form": "^7.56.3",
 		"server-only": "^0.0.1",
 		"supabase": "^2.22.12",
 		"superjson": "^2.2.1",
 		"tailwind-merge": "^3.2.0",
-		"zod": "^3.24.2"
+		"zod": "^3.24.4"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
