--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"supabase": "^2.22.12",
 		"superjson": "^2.2.1",
 		"tailwind-merge": "^3.2.0",
+		"vaul": "^1.1.2",
 		"zod": "^3.24.4"
 	},
 	"devDependencies": {
