--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"@trpc/client": "^11.0.0",
 		"@trpc/react-query": "^11.0.0",
 		"@trpc/server": "^11.0.0",
+		"canvas-confetti": "^1.9.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"drizzle-orm": "^0.41.0",
@@ -43,6 +44,7 @@
 		"next": "^15.2.3",
 		"postgres": "^3.4.4",
 		"react": "^19.0.0",
+		"react-confetti": "^6.4.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.56.3",
 		"server-only": "^0.0.1",
