--- a/package.json
+++ b/package.json
@@ -42,12 +42,14 @@
 		"drizzle-orm": "^0.41.0",
 		"lucide-react": "^0.508.0",
 		"next": "^15.2.3",
+		"next-themes": "^0.4.6",
 		"postgres": "^3.4.4",
 		"react": "^19.0.0",
 		"react-confetti": "^6.4.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.56.3",
 		"server-only": "^0.0.1",
+		"sonner": "^2.0.3",
 		"supabase": "^2.22.12",
 		"superjson": "^2.2.1",
 		"tailwind-merge": "^3.2.0",
