--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"drizzle-orm": "^0.41.0",
+		"drizzle-zod": "^0.7.1",
 		"lucide-react": "^0.508.0",
 		"next": "^15.2.3",
 		"next-themes": "^0.4.6",
