--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"canvas-confetti": "^1.9.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"csv-writer": "^1.6.0",
 		"drizzle-orm": "^0.41.0",
 		"drizzle-zod": "^0.7.1",
 		"lucide-react": "^0.508.0",
