--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"csv-writer": "^1.6.0",
 		"drizzle-orm": "^0.41.0",
 		"drizzle-zod": "^0.7.1",
+		"framer-motion": "^12.10.5",
 		"lucide-react": "^0.508.0",
 		"next": "^15.2.3",
 		"next-themes": "^0.4.6",
