--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"react-confetti": "^6.4.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.56.3",
+		"react-resizable-panels": "^3.0.1",
 		"server-only": "^0.0.1",
 		"sonner": "^2.0.3",
 		"supabase": "^2.22.12",
