--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
+		"@formkit/auto-animate": "^0.8.2",
 		"@hookform/resolvers": "^5.0.1",
 		"@radix-ui/react-accordion": "^1.2.10",
 		"@radix-ui/react-alert-dialog": "^1.1.13",
