--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
 		"superjson": "^2.2.1",
 		"tailwind-merge": "^3.2.0",
 		"vaul": "^1.1.2",
-		"zod": "^3.24.4"
+		"zod": "^3.24.4",
+		"zustand": "^5.0.4"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
