--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"csv-writer": "^1.6.0",
+		"date-fns": "^4.1.0",
 		"drizzle-orm": "^0.41.0",
 		"drizzle-zod": "^0.7.1",
 		"framer-motion": "^12.10.5",
