--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
+		"@aws-sdk/client-s3": "^3.808.0",
+		"@aws-sdk/s3-request-presigner": "^3.808.0",
 		"@formkit/auto-animate": "^0.8.2",
 		"@hookform/resolvers": "^5.0.1",
 		"@radix-ui/react-accordion": "^1.2.10",
