--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
 		"@aws-sdk/s3-request-presigner": "^3.808.0",
 		"@formkit/auto-animate": "^0.8.2",
 		"@hookform/resolvers": "^5.0.1",
+		"@mux/mux-node": "^11.1.0",
+		"@mux/mux-player-react": "^3.4.0",
+		"@mux/mux-uploader-react": "^1.2.0",
 		"@radix-ui/react-accordion": "^1.2.10",
 		"@radix-ui/react-alert-dialog": "^1.1.13",
 		"@radix-ui/react-avatar": "^1.1.9",
@@ -63,6 +66,7 @@
 		"react-confetti": "^6.4.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.56.3",
+		"react-media-recorder": "^1.7.1",
 		"react-resizable-panels": "^3.0.1",
 		"server-only": "^0.0.1",
 		"sonner": "^2.0.3",
