--- a/package.json
+++ b/package.json
@@ -1,97 +1,99 @@
 {
-	"name": "testimate",
-	"version": "0.1.0",
-	"private": true,
-	"type": "module",
-	"scripts": {
-		"build": "next build",
-		"check": "biome check .",
-		"check:unsafe": "biome check --write --unsafe .",
-		"check:write": "biome check --write .",
-		"db:generate": "drizzle-kit generate",
-		"db:migrate": "drizzle-kit migrate",
-		"db:push": "drizzle-kit push",
-		"db:studio": "drizzle-kit studio",
-		"dev": "next dev --turbo",
-		"preview": "next build && next start",
-		"start": "next start",
-		"typecheck": "tsc --noEmit"
-	},
-	"dependencies": {
-		"@aws-sdk/client-s3": "^3.808.0",
-		"@aws-sdk/s3-request-presigner": "^3.808.0",
-		"@formkit/auto-animate": "^0.8.2",
-		"@hookform/resolvers": "^5.0.1",
-		"@mendable/firecrawl-js": "^1.24.0",
-		"@mux/mux-node": "^11.1.0",
-		"@mux/mux-player-react": "^3.4.0",
-		"@mux/mux-uploader-react": "^1.2.0",
-		"@radix-ui/react-accordion": "^1.2.10",
-		"@radix-ui/react-alert-dialog": "^1.1.13",
-		"@radix-ui/react-avatar": "^1.1.9",
-		"@radix-ui/react-checkbox": "^1.3.1",
-		"@radix-ui/react-dialog": "^1.1.13",
-		"@radix-ui/react-dropdown-menu": "^2.1.14",
-		"@radix-ui/react-label": "^2.1.6",
-		"@radix-ui/react-popover": "^1.1.13",
-		"@radix-ui/react-radio-group": "^1.3.6",
-		"@radix-ui/react-select": "^2.2.4",
-		"@radix-ui/react-separator": "^1.1.6",
-		"@radix-ui/react-slot": "^1.2.2",
-		"@radix-ui/react-switch": "^1.2.4",
-		"@radix-ui/react-tabs": "^1.1.11",
-		"@radix-ui/react-toggle": "^1.1.8",
-		"@radix-ui/react-toggle-group": "^1.1.9",
-		"@radix-ui/react-tooltip": "^1.2.6",
-		"@supabase/ssr": "^0.6.1",
-		"@t3-oss/env-nextjs": "^0.12.0",
-		"@tanstack/react-query": "^5.69.0",
-		"@trpc/client": "^11.0.0",
-		"@trpc/react-query": "^11.0.0",
-		"@trpc/server": "^11.0.0",
-		"@vercel/og": "^0.6.8",
-		"canvas-confetti": "^1.9.3",
-		"class-variance-authority": "^0.7.1",
-		"clsx": "^2.1.1",
-		"csv-writer": "^1.6.0",
-		"date-fns": "^4.1.0",
-		"drizzle-orm": "^0.41.0",
-		"drizzle-zod": "^0.7.1",
-		"framer-motion": "^12.10.5",
-		"lucide-react": "^0.508.0",
-		"next": "^15.2.3",
-		"next-themes": "^0.4.6",
-		"nuqs": "^2.4.3",
-		"postgres": "^3.4.4",
-		"react": "^19.0.0",
-		"react-confetti": "^6.4.0",
-		"react-dom": "^19.0.0",
-		"react-hook-form": "^7.56.3",
-		"react-media-recorder": "^1.7.1",
-		"react-resizable-panels": "^3.0.1",
-		"server-only": "^0.0.1",
-		"sonner": "^2.0.3",
-		"supabase": "^2.22.12",
-		"superjson": "^2.2.1",
-		"tailwind-merge": "^3.2.0",
-		"vaul": "^1.1.2",
-		"zod": "^3.24.4",
-		"zustand": "^5.0.4"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
-		"@tailwindcss/postcss": "^4.0.15",
-		"@types/node": "^20.14.10",
-		"@types/react": "^19.0.0",
-		"@types/react-dom": "^19.0.0",
-		"drizzle-kit": "^0.30.5",
-		"postcss": "^8.5.3",
-		"tailwindcss": "^4.0.15",
-		"tw-animate-css": "^1.2.9",
-		"typescript": "^5.8.2"
-	},
-	"ct3aMetadata": {
-		"initVersion": "7.39.3"
-	},
-	"packageManager": "pnpm@9.14.4"
+  "name": "testimate",
+  "version": "0.1.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "build": "next build",
+    "check": "biome check .",
+    "check:unsafe": "biome check --write --unsafe .",
+    "check:write": "biome check --write .",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "dev": "next dev --turbo",
+    "preview": "next build && next start",
+    "start": "next start",
+    "typecheck": "tsc --noEmit",
+    "dev:webhook": "ngrok http --url=free-skink-neat.ngrok-free.app 3000"
+  },
+  "dependencies": {
+    "@aws-sdk/client-s3": "^3.808.0",
+    "@aws-sdk/s3-request-presigner": "^3.808.0",
+    "@formkit/auto-animate": "^0.8.2",
+    "@hookform/resolvers": "^5.0.1",
+    "@mendable/firecrawl-js": "^1.24.0",
+    "@mux/mux-node": "^11.1.0",
+    "@mux/mux-player-react": "^3.4.0",
+    "@mux/mux-uploader-react": "^1.2.0",
+    "@mux/mux-video-react": "^0.25.2",
+    "@radix-ui/react-accordion": "^1.2.10",
+    "@radix-ui/react-alert-dialog": "^1.1.13",
+    "@radix-ui/react-avatar": "^1.1.9",
+    "@radix-ui/react-checkbox": "^1.3.1",
+    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-dropdown-menu": "^2.1.14",
+    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-popover": "^1.1.13",
+    "@radix-ui/react-radio-group": "^1.3.6",
+    "@radix-ui/react-select": "^2.2.4",
+    "@radix-ui/react-separator": "^1.1.6",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-switch": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.11",
+    "@radix-ui/react-toggle": "^1.1.8",
+    "@radix-ui/react-toggle-group": "^1.1.9",
+    "@radix-ui/react-tooltip": "^1.2.6",
+    "@supabase/ssr": "^0.6.1",
+    "@t3-oss/env-nextjs": "^0.12.0",
+    "@tanstack/react-query": "^5.69.0",
+    "@trpc/client": "^11.0.0",
+    "@trpc/react-query": "^11.0.0",
+    "@trpc/server": "^11.0.0",
+    "@vercel/og": "^0.6.8",
+    "canvas-confetti": "^1.9.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "csv-writer": "^1.6.0",
+    "date-fns": "^4.1.0",
+    "drizzle-orm": "^0.41.0",
+    "drizzle-zod": "^0.7.1",
+    "framer-motion": "^12.10.5",
+    "lucide-react": "^0.508.0",
+    "next": "^15.2.3",
+    "next-themes": "^0.4.6",
+    "nuqs": "^2.4.3",
+    "postgres": "^3.4.4",
+    "react": "^19.0.0",
+    "react-confetti": "^6.4.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.3",
+    "react-media-recorder": "^1.7.1",
+    "react-resizable-panels": "^3.0.1",
+    "server-only": "^0.0.1",
+    "sonner": "^2.0.3",
+    "supabase": "^2.22.12",
+    "superjson": "^2.2.1",
+    "tailwind-merge": "^3.2.0",
+    "vaul": "^1.1.2",
+    "zod": "^3.24.4",
+    "zustand": "^5.0.4"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "1.9.4",
+    "@tailwindcss/postcss": "^4.0.15",
+    "@types/node": "^20.14.10",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "drizzle-kit": "^0.30.5",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.15",
+    "tw-animate-css": "^1.2.9",
+    "typescript": "^5.8.2"
+  },
+  "ct3aMetadata": {
+    "initVersion": "7.39.3"
+  },
+  "packageManager": "pnpm@9.14.4"
 }
