Refactor constants and types for improved type safety; remove unused DEFAULT_WALL_OF_LOVE_CONFIG and update type assertions in widget configurators

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "preview": "next build && next start",
     "start": "next start",
     "typecheck": "tsc --noEmit",
-    "dev:webhook": "ngrok http --url=free-skink-neat.ngrok-free.app 3000"
+    "dev:webhook": "ngrok http --url=free-skink-neat.ngrok-free.app 3000",
+    "build:waerr": "__NEXT_TEST_MODE=true pnpm build"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.808.0",
