--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,32 @@
-# Since the ".env" file is gitignored, you can use the ".env.example" file to
-# build a new ".env" file when you clone the repo. Keep this file up-to-date
-# when you add new variables to `.env`.
-
-# This file will be committed to version control, so make sure not to have any
-# secrets in it. If you are cloning this repo, create a copy of this file named
-# ".env" and populate it with your secrets.
-
 # When adding additional environment variables, the schema in "/src/env.js"
 # should be updated accordingly.
 
-# Drizzle
-DATABASE_URL="postgresql://postgres:password@localhost:5432/testimate"
+DATABASE_URL=""
+
+# Supabase
+# SUPABASE_URL="https://your-project-ref.supabase.co"
+SUPABASE_SERVICE_ROLE_KEY=""
+NEXT_PUBLIC_SUPABASE_URL=""
+NEXT_PUBLIC_SUPABASE_ANON_KEY=""
+
+NEXT_PUBLIC_URL="http://localhost:3000"
+
+
+S3_ACCESS_KEY_ID=""
+S3_SECRET_ACCESS_KEY=""
+NEXT_PUBLIC_S3_ENDPOINT=""
+S3_REGION=""
+NEXT_PUBLIC_S3_BUCKET_NAME="uploads"
+
+MUX_TOKEN_ID=""
+MUX_TOKEN_SECRET=""
+JWT_SECRET="iamsosecretman"
+
+MUX_WEBHOOK_SECRET=""
+# FIRECRAWL_API_KEY=""
 
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
+
+
